<resources>
    <string name="app_name">RecWeight</string>
    <string name="toolbar_title_weight_input">入力</string>
    <string name="toolbar_title_weight_view">記録詳細</string>
    <string name="activity_settings">設定</string>
    <string name="toolbar_title_import">インポート</string>
    <string name="toolbar_title_export">エクスポート</string>
    <string name="toolbar_title_license">ライセンス</string>
    <string name="toolbar_title_contact">お問い合わせ</string>

    <string name="bottom_list">list</string>
    <string name="bottom_chart">chart</string>

    <string name="ad_app_id">ca-app-pub-3895429894123918~4574813374</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_show_type">changeShowType</string>
    <string name="action_done">done</string>
    <string name="action_delete">delete</string>
    <string name="weight_input_time_title">時刻</string>
    <string name="weight_input_weight_title">体重</string>
    <string name="weight_input_weight_default">0.0</string>
    <string name="weight_input_weight_unit">kg</string>
    <string name="weight_input_fat_title">体脂肪</string>
    <string name="weight_input_fat_default">0.0</string>
    <string name="weight_input_fat_unit">%</string>
    <string name="weight_input_memo_title">メモ</string>
    <string name="list_weight_default">0.0kg</string>
    <string name="list_weight_pattern">%skg</string>
    <string name="list_fat_default">0.0%</string>
    <string name="list_fat_pattern">%s%%</string>
    <string-array name="long_tap_menus">
        <item>@string/settings_lt_edit</item>
        <item>@string/settings_lt_delete</item>
    </string-array>

    <string name="show_records_no_data">記録がありません。\nlist右下のペンボタンで記録をつけ始めましょう！</string>

    <string name="chart_duration_week">1週間</string>
    <string name="chart_duration_month">1か月</string>
    <string name="chart_duration_season">3か月</string>
    <string name="chart_duration_year">1年</string>


    <string name="d_delete_item_title">体重データの削除</string>
    <string name="d_delete_item">このデータを削除します。よろしいですか？</string>

    <string name="settings_main_long_tap">体重データ長押し時の処理</string>
    <string name="settings_main_import">データをインポートする</string>
    <string name="settings_main_export">データをエクスポートする</string>
    <string name="settings_main_export_description">最終エクスポート日時: %s</string>
    <string name="settings_main_account">アカウントの設定</string>
    <string name="settings_main_all_delete">体重データの全削除</string>
    <string name="settings_main_license">ライセンス</string>
    <string name="settings_main_contact">お問い合わせ</string>

    <string name="settings_lt_show_menu">メニュー表示(編集、削除)</string>
    <string name="settings_lt_edit">編集</string>
    <string name="settings_lt_delete">削除</string>
    <string name="settings_lt_nothing">何もしない</string>

    <string name="settings_account_no_data">未設定</string>

    <string name="d_settings_all_delete_title">体重データの全削除</string>
    <string name="d_settings_all_delete">体重のデータをすべて削除します。本当によろしいですか？</string>
    <string name="d_settings_complete_all_delete">すべての体重のデータを削除しました。</string>

    <string name="settings_import_description">インポートしたいGoogleSpreadSheetsの \n URLを入力してください。</string>
    <string name="settings_import_hint_url">URL</string>
    <string name="settings_import_button_start">開始</string>

    <string name="settings_import_text_from_info">URLから情報を取得中です。</string>
    <string name="settings_import_text_importing">インポート中です</string>
    <string name="snack_settings_import_backpress">処理中によりバックキーは押せません。</string>
    <string name="d_import_complete_title">インポート完了</string>
    <string name="d_import_complete">インポートが成功しました。</string>
    <string name="d_import_complete_skip">以下のデータは同時刻のデータがすでにあるため、スキップされました。</string>

    <string name="settings_export_description">下記URLにExportしました。</string>
    <string name="settings_export_share">共有する</string>

    <string name="settings_contact_name_title">お名前</string>
    <string name="settings_contact_email_title">メールアドレス</string>
    <string name="settings_contact_description_title">詳細(必須)</string>
    <string name="d_contact_complete">管理者にメッセージを送信いたしました。ご意見ありがとうございました。</string>
    <string name="settings_contact_type_title">カテゴリー</string>
    <string name="settings_contact_type_error">エラー報告</string>
    <string name="settings_contact_type_others">その他お問い合わせ</string>

    <string name="err_title_input">入力値エラー</string>
    <string name="err_weight_empty">体重を入力して下さい。</string>
    <string name="err_fat_over_100">体脂肪率は100%以下の数字を入力してください。</string>
    <string name="err_title_db">データベースエラー</string>
    <string name="err_db">データベースから情報が取得できませんでした。\n 再度読み込みなおしてください。</string>
    <string name="err_db_registered_same_time">同じ時間の記録が存在します。記録時刻を変更してください。</string>
    <string name="err_import_title_illegal_template">インポートファイルエラー</string>
    <string name="err_import_illegal_template">インポートファイルの形式が違うため読み込めません。正しい形式のファイルを指定してください。\n エラー箇所:%s</string>
    <string name="err_import_illegal_file_name">ファイル名</string>
    <string name="err_import_illegal_sheet_name">シート名</string>
    <string name="err_import_illegal_sheet_num">シート数</string>
    <string name="err_import_illegal_column_name">カラム名</string>
    <string name="err_import_illegal_column_num">カラム数</string>
    <string name="err_fatal_title">致命的エラー</string>
    <string name="err_fatal">致命的エラーが発生しました。再試行してください。</string>
    <string name="err_url_empty">URLを入力してください。</string>
    <string name="err_incorrect_url_title">誤ったURL</string>
    <string name="err_incorrect_url">正しいURLを入力してください。</string>
    <string name="err_offline_title">ネットワーク利用不可</string>
    <string name="err_offline">ネットワークが利用できません。ネットワーク接続可能な状態にしてください。</string>
    <string name="err_no_data_title">データなし</string>
    <string name="err_no_data">データがないため、エクスポートできません。</string>
    <string name="err_no_permission_title">パーミッションエラー</string>
    <string name="err_no_permission">この機能に必要なパーミッション:%sが許可されていないため、処理が続行できません。</string>
    <string name="err_permission_account">連絡先へのアクセス</string>

    <string name="export_file_name_header">RecWeight_export_</string>
    <string name="export_file_sheets_name">RecWeight</string>
    <string name="export_file_sheets_column_date">Date</string>
    <string name="export_file_sheets_column_weight">Weight</string>
    <string name="export_file_sheets_column_fat">Fat</string>
    <string name="export_file_sheets_column_dumbbell">Dumbbell</string>
    <string name="export_file_sheets_column_toilet">Toilet</string>
    <string name="export_file_sheets_column_moon">Moon</string>
    <string name="export_file_sheets_column_liquor">Liquor</string>
    <string name="export_file_sheets_column_star">Star</string>
    <string name="export_file_sheets_column_memo">Memo</string>

    <string name="tutorial_input_title">記録ボタン</string>
    <string name="tutorial_input_description">体重等の記録をとってみましょう！</string>
    <string name="tutorial_stamp_title">スタンプ</string>
    <string name="tutorial_stamp_description">今日あったことをスタンプでメモをしましょう！</string>

</resources>
