<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/areaProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/progressExport"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/areaExportUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/textImportDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            android:text="@string/settings_export_description"/>

        <EditText
            android:id="@+id/editExportUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textImportDescription"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/settings_import_hint_url"
            android:inputType="textUri"/>

        <Button
            android:id="@+id/btnExportShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editExportUrl"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/icon_share"
            android:paddingTop="16dp"
            android:text="@string/settings_export_share"
            />

    </RelativeLayout>

</FrameLayout>