<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/areaContact"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:layout_editor_absoluteY="25dp">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/settings_contact_name_title"
            android:inputType="textPersonName"
            android:text="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/editMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/settings_contact_email_title"
            android:inputType="textPersonName"
            android:text="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editName"/>

        <Spinner
            android:id="@+id/spinnerContactType"
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:entries="@array/contact_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textContactType"
            app:layout_constraintTop_toBottomOf="@+id/editMail"/>

        <TextView
            android:id="@+id/textContactType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_contact_type_title"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerContactType"
            app:layout_constraintEnd_toStartOf="@+id/spinnerContactType"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinnerContactType"
            />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/settings_contact_description_title"
            android:inputType="textPersonName"
            android:text="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerContactType"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
