<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <RelativeLayout
            android:id="@+id/areaUrlInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textImportDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="16dp"
                android:text="@string/settings_import_description"/>

            <EditText
                android:id="@+id/editImportUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textImportDescription"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:hint="@string/settings_import_hint_url"
                android:imeOptions="actionSend"
                android:inputType="textUri"
                android:maxLines="1"/>

            <Button
                android:id="@+id/buttonImportStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editImportUrl"
                android:layout_centerHorizontal="true"
                android:padding="16dp"
                android:text="@string/settings_import_button_start"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/areaProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressImport"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginStart="48dp"/>

        </RelativeLayout>
    </FrameLayout>
</ScrollView>